--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -247,6 +247,7 @@ nav li a:hover {
   align-items: center;
   justify-content: center;
   width:100%;
+  //text-align: center;
 }
 
 
@@ -254,12 +255,15 @@ nav li a:hover {
   font-size: 2.5rem;
   font-weight: bold;
   //color:red;
+  text-align: center;
 }
 
 .having-trouble p {
   width:42rem;
+//  margin-left: auto;
+  //margin-right: auto;
   text-align: center;
-  //color:green;
+  //background-color: green;
 }
 
 .having-trouble .btn {
@@ -268,10 +272,10 @@ nav li a:hover {
 }
 
 
-@media only screen and (max-width:100px) {
+@media only screen and (max-width:620px) {
   .having-trouble p {
-   color:red;
-   //background-color: blue;
-   
+    width:90%;
+    //color:red;
+    //background-color: blue;
   }
 }
